--- a/src/AdminBundle/Resources/config/routing.yml
+++ b/src/AdminBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
-admin_homepage:
-    path:     /
-    defaults: { _controller: AdminBundle:Default:index }
+admin_dashboard:
+    resource: "routes/dashboard.yml"
+
+admin_transport:
+    prefix:     /transport
+    resource: "routes/transport.yml"
