--- a/src/AccountBundle/Resources/config/services.yml
+++ b/src/AccountBundle/Resources/config/services.yml
@@ -1,4 +1,3 @@
 services:
-#    account.example:
-#        class: AccountBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    app.verify_token:
+        class: AccountBundle\Services\VerifyTokenService
