--- a/src/AdminBundle/Resources/config/routing.yml
+++ b/src/AdminBundle/Resources/config/routing.yml
@@ -1,6 +1,7 @@
 admin_dashboard:
+    prefix:     /{token}
     resource: "@AdminBundle/Resources/config/routes/dashboard.yml"
 
 admin_transport:
-    prefix:     /transport
+    prefix:     /{token}/transport
     resource: "@AdminBundle/Resources/config/routes/transport.yml"
