configuation of the gallery module (installation of assets).

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,6 @@
 gallery:
     resource: "@GalleryBundle/Resources/config/routing.yml"
-    prefix:   /
+    host:     "%gallery_domain%"
 
 account:
     resource: "@AccountBundle/Resources/config/routing.yml"
